// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SidekickCard /> renders SidekickCard with alert card type 1`] = `
.c0 {
  border-radius: 4px;
  background: url(alert-icon.svg) 24px 48px no-repeat #FFFFFF;
  padding: 48px 48px 48px 80px;
  border-left: 16px solid #FF9F0A;
}

@media (max-width:720px) {
  .c0 {
    border-radius: 0;
    background-position: 24px 18px;
    padding: 56px 32px 32px 24px;
  }
}

<div
  class="c0"
  type="alert"
>
  <div>
    Content
  </div>
</div>
`;

exports[`<SidekickCard /> renders SidekickCard with triumph card type  with no a11y violations 1`] = `
.c0 {
  border-radius: 4px;
  background: url(triumph-icon.svg) 24px 48px no-repeat #FFFFFF;
  padding: 48px 48px 48px 80px;
  border-left: 16px solid #3EBC64;
}

@media (max-width:720px) {
  .c0 {
    border-radius: 0;
    background-position: 24px 18px;
    padding: 56px 32px 32px 24px;
  }
}

<div
  class="c0"
  type="triumph"
>
  <div>
    Content
  </div>
</div>
`;

exports[`<SidekickCard /> renders SidekickCard with verified card type 1`] = `
.c0 {
  border-radius: 4px;
  background: url(valid-icon.svg) 24px 48px no-repeat #FFFFFF;
  padding: 48px 48px 48px 80px;
  border-left: 16px solid #3EBC64;
}

@media (max-width:720px) {
  .c0 {
    border-radius: 0;
    background-position: 24px 18px;
    padding: 56px 32px 32px 24px;
  }
}

<div
  class="c0"
  type="verified"
>
  <div>
    Content
  </div>
</div>
`;
